# NamedTuple

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/conan/: default-ubuntu
.github/workflows/: cmake-single-platform.yml
include/: NamedTuple.hpp
source/sample/: main.cpp
test/: CMakeLists.txt  unit_test_named_tuple.cpp
test/compile_tests/: compile_tests.py
test/compile_tests/tests/: different_size_comparison.cpp  non_unique_keys.cpp  same_size_comparison.cpp  tuple_element_empty_tuple.cpp  tuple_element_out_of_range.cpp
test/compile_tests/utility/: get_compiler.py  run_compile_tests.py
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
